syntax = "proto3"; 

package food;
option go_package = "github.com/proelbtn/school-eve-navi/gateway/protos/food";

enum FoodGenre {
    Invalid = 0;
    GenreA = 1;
    GenreB = 2;
}

message FoodRecord {
    int64 id = 1;
    FoodData data = 2;
}

message FoodData {
    string name = 1;
    string address = 2;
    double latitude = 3;
    double longitude = 4;
    FoodGenre genre = 5;
}

message FoodCreateQuery {
    FoodData data = 1;
}

message FoodCreateResult {
    FoodRecord record = 1;
}

message FoodDeleteQuery {
    int64 id = 1;
}

message FoodDeleteResult {
    int64 affected = 1;
}

message FoodGetQuery {
    int64 id = 1;
}

message FoodGetResult {
    FoodRecord record = 1;
}

message FoodSearchQuery {
    string name = 1;
    double latitude = 2;
    double longitude = 3;
    FoodGenre genre = 4;
}

message FoodSearchResult {
    repeated FoodRecord records = 1;
}
